# hdx-scraper-iom-dtm

./: .gitignore  README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.config/: pre-commit-config.yaml  ruff.toml
.github/: run-python-script.yaml
.github/workflows/: publish.yaml  run-python-script.yaml  run-python-tests.yaml
src/hdx/scraper/dtm/: __main__.py  (+1 more)
tests/: conftest.py  test_dtm.py  test_iom_dtm.py
tests/fixtures/: data_for_quickcharts.csv  global-iom-dtm-from-api-admin-0-to-2.csv  global-iom-dtm-from-api-admin0.csv  global-iom-dtm-from-api-admin1.csv  global-iom-dtm-from-api-admin2.csv  hdx_hapi_idps_global.csv  qc_global-iom-dtm-from-api-admin-0-to-2.csv  qc_global-iom-dtm-from-api-admin0.csv
tests/fixtures/input/: common-getallcountrylist.json  common-getalloperationlist.json  dataset-global-iom-dtm-from-api.json  displacement-admin0-admin0pcode-afg.json  displacement-admin0-admin0pcode-hti.json  displacement-admin0-admin0pcode-tcd.json  displacement-admin1-admin0pcode-afg.json  displacement-admin1-admin0pcode-hti.json  displacement-admin1-admin0pcode-tcd.json  displacement-admin2-admin0pcode-hti.json  displacement-admin2-admin0pcode-tcd.json  displacement-country-list.json  displacement-operation-list.json  download-global-pcode-lengths.csv  download-global-pcodes-adm-1-2.csv  idpadmin0data-getadmin0datav2-admin0pcode-afg.json  idpadmin0data-getadmin0datav2-admin0pcode-hti.json  idpadmin0data-getadmin0datav2-admin0pcode-irq.json  idpadmin0data-getadmin0datav2-admin0pcode-sdn.json  idpadmin0data-getadmin0datav2-admin0pcode-tcd.json  idpadmin1data-getadmin1datav2-admin0pcode-afg.json  idpadmin1data-getadmin1datav2-admin0pcode-hti.json  idpadmin1data-getadmin1datav2-admin0pcode-irq.json  idpadmin1data-getadmin1datav2-admin0pcode-sdn.json  idpadmin1data-getadmin1datav2-admin0pcode-tcd.json  idpadmin2data-getadmin2datav2-admin0pcode-afg.json  idpadmin2data-getadmin2datav2-admin0pcode-hti.json  (+2 more)
(+10 files in other folders)
