#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-iom-dtm"
requires-python = ">=3.12"
dependencies = [
  "hdx-python-scraper>= 2.6.5",
  "hdx-python-api>= 6.5.2",
  "hdx-python-country>= 3.9.8",
  "hdx-python-utilities>= 3.9.5",
  "pandas",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "cydifflib"
]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.iom_dtm.__main__:main"
